--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,8 @@
 # process, which may cause wedges in the gate later.
 
 configparser==3.5.0
-flake8==2.5.5
-hacking==0.11.0
-mccabe==0.2.1
-pbr>=1.6 # Apache-2.0
-pep8==1.5.7
-pyflakes==0.8.1
 pyotp==2.2.1
+pyperclip>=1.5.27
 python-xlib==0.17
 PyUserInput==0.1.11
-six==1.10.0
 
